--- a/Expense-Reimbursement-System-Backend/src/main/resources/application.properties
+++ b/Expense-Reimbursement-System-Backend/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.username=${ERS_DB_USERNAME}
 spring.datasource.password=${ERS_DB_PASSWORD}
 
 spring.jpa.properties.hibernate.default_schema=${ERS_DB_SCHEMA}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
